// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a tictactoe > should reveal position 1`] = `
"
1: -   2: -+   
O| |2  O| |X!  
-+-+-  -+-+--  
 | |X   | |X!  
-+-+-  -+-+--  
 |O|X   |O|X!  "
`;

exports[`a tictactoe > when it is told to reveal positions > should look like this 1`] = `
"
1: --     2: ---  3: ---  4: ----  5: -----  6: ---  7: ----  
X|X|O     X|X|O   X|X|O   X|X|O    X|X|O     X|X|O   X|X|O    
-+-+-     -+-+-   -+-+-   -+-+-    -+-+-     -+-+-   -+-+-    
2| |      X| |3   X| |O   X| |O    X| |O     X| |    X| |8    
-+-+-     -+-+-   -+-+-   -+-+-    -+-+-     -+-+-   -+-+-    
O| |      O|6|    O| |4   O|5|X    O|O|X     O|O|7   O|O|X    
                                                              
8: -----                                                           
X|X|O                                                              
-+-+-                                                              
X| |O                                                              
-+-+-                                                              
O|O|X                                                              "
`;

exports[`a tictactoe > when it is told to reveal positions > should look like this 2`] = `
"
1: --     2: ---  3: ---  4: ----  5: -----  6: ---  7: ----  
O| |      O|3|    O|O|4   O|O|X    O|O|X     O| |7   O|8|X    
-+-+-     -+-+-   -+-+-   -+-+-    -+-+-     -+-+-   -+-+-    
X| |      X| |6   X| |    X| |5    X| |O     X| |O   X| |O    
-+-+-     -+-+-   -+-+-   -+-+-    -+-+-     -+-+-   -+-+-    
X|2|O     X|X|O   X|X|O   X|X|O    X|X|O     X|X|O   X|X|O    
                                                              
8: -----                                                           
O|O|X                                                              
-+-+-                                                              
X| |O                                                              
-+-+-                                                              
X|X|O                                                              "
`;

exports[`a tictactoe > when playing 0, 1, 3, 6 and 4 > and 7 and 8 > and winner 01 is revealed > should delete states by double clicking 1`] = `
"
1:      2:     3: -   4: -     5:     6: -   7: -   
2| |5   X|3|   X|O|   X| |      |6|X   |O|X   | |X  
-+-+--  -+-+-  -+-+-  -+-+-    -+-+-  -+-+-  -+-+-  
 | |    4| |    | |   O| |      | |7   | |    | |O  
-+-+--  -+-+-  -+-+-  -+-+-    -+-+-  -+-+-  -+-+-  
8| |11   | |    | |    | |      | |    | |    | |   
                                                    
8:      9: -   10: -  11:      12: -  13: -         
 |  |    | |    | |    |  |     | |    | |          
-+--+-  -+-+-  -+-+-  -+--+--  -+-+-  -+-+-         
9|  |   O| |    | |    |  |12   | |O   | |          
-+--+-  -+-+-  -+-+-  -+--+--  -+-+-  -+-+-         
X|10|   X| |   X|O|    |13|X    | |X   |O|X         "
`;

exports[`a tictactoe > when playing 0, 1, 3, 6 and 4 > and 7 and 8 > should show winner even higher up 1`] = `
"
1: -       2: -+       3: -+-     4: -+-+     5: -+-      6: -+-+    7: -+-      
X|O|       X|O |3      X|O|O      X!|O|O      X|O|        X!|O|      X|O|        
-+-+-      -+--+--     -+-+-      --+-+-      -+-+-       --+-+-     -+-+-       
2| |       X|5 |7      X| |       X!| |       X|O|        X!|O|      X| |O       
-+-+-      -+--+--     -+-+-      --+-+-      -+-+-       --+-+-     -+-+-       
 | |       9|19|21     4| |       X!| |       6| |        X!| |      8| |        
                                                                                 
8: -+-+    9: -+-      10: -+-+   11: -+-+-   12: -+-+-+  13: -+-+-  14: -+-+-+  
X!|O|      X|O |       X|O |11    X|O|O       X |O |O     X|O|       X!|O |      
--+-+-     -+--+-      -+--+--    -+-+--      --+--+--    -+-+--     --+--+--    
X!| |O     X|10|       X|X |13    X|X|12      X!|X!|X!    X|X|O      X |X!|O     
--+-+-     -+--+-      -+--+--    -+-+--      --+--+--    -+-+--     --+--+--    
X!| |      O|  |       O|15|17    O| |        O |  |      O| |14     O |  |X!    
                                                                                 
15: -+-+-  16: -+-+-+  17: -+-+-  18: -+-+-+  19: -+-     20: -+-+   21: -+-     
X|O|       X!|O |      X|O|       X |O |      X |O|       X!|O|      X |O|       
-+-+--     --+--+--    -+-+--     --+--+--    --+-+-      --+-+-     --+-+-      
X|X|       X |X!|      X|X|18     X!|X!|X!    X | |       X!| |      X | |       
-+-+--     --+--+--    -+-+--     --+--+--    --+-+-      --+-+-     --+-+-      
O|O|16     O |O |X!    O| |O      O |  |O     20|O|       X!|O|      22| |O      
                                                                                 
22: -+-+                                                                              
X!|O|                                                                                 
--+-+-                                                                                
X!| |                                                                                 
--+-+-                                                                                
X!| |O                                                                                "
`;

exports[`a tictactoe > when playing 0, 1, 3, 6 and 4 > should show winner higher up 1`] = `
"
1: -      2: -+   3: -+-    4: -+-+   5: -+-  6: -+-+   7: -+-  
X|O|      X|O|3   X|O|O     X |O |O   X|O|    X!|O |    X|O|    
-+-+-     -+-+-   -+-+-     --+--+--  -+-+-   --+--+--  -+-+-   
X|2|      X|X|5   X|X|4     X!|X!|X!  X|X|O   X |X!|O   X|X|    
-+-+-     -+-+-   -+-+-     --+--+--  -+-+-   --+--+--  -+-+-   
O| |      O|7|9   O| |      O |  |    O| |6   O |  |X!  O|O|8   
                                                                
8: -+-+   9: -+-  10: -+-+                                         
X!|O |    X|O|    X |O |                                           
--+--+--  -+-+--  --+--+--                                         
X |X!|    X|X|10  X!|X!|X!                                         
--+--+--  -+-+--  --+--+--                                         
O |O |X!  O| |O   O |  |O                                          "
`;

exports[`a tictactoe > when playing 0, 1, 3, 6, 4 and 5 > should show winner and loser 1`] = `
"
1: -   2: -+     
X|O|   X!|O |    
-+-+-  --+--+--  
X|X|O  X |X!|O   
-+-+-  --+--+--  
O| |2  O |  |X!  "
`;

exports[`a tictactoe > when playing 0, 2, 1, 6, 3 and 8 and revealing the winner > and then winner 023 is revealed > and then winner 02164 is revealed > and then winner 02163584 is revealed > and then winner 021635874 is revealed > should look like this 1`] = `
"
1: -----  2: -----+  
X|X|O     X!|X |O    
-+-+-     --+--+--   
X|2|O     X |X!|O    
-+-+-     --+--+--   
O|O|X     O |O |X!   "
`;

exports[`a tictactoe > when playing 0, 2, 1, 6, 3 and 8 and revealing the winner > and then winner 023 is revealed > and then winner 02164 is revealed > and then winner 02163584 is revealed > should look like this 1`] = `
"
1: ----  2: ----+  
X|X|O    X |X |O!  
-+-+-    --+--+--  
X|2|O    X |O!|O   
-+-+-    --+--+--  
O| |X    O!|  |X   "
`;

exports[`a tictactoe > when playing 0, 2, 1, 6, 3 and 8 and revealing the winner > and then winner 023 is revealed > and then winner 02164 is revealed > should look like this 1`] = `
"
1: ---  2: ---+  
X|X|O   X|X|O    
-+-+-   -+-+-    
X| |    X| |     
-+-+-   -+-+-    
O| |2   O| |O    "
`;

exports[`a tictactoe > when playing 0, 2, 1, 6, 3 and 8 and revealing the winner > and then winner 023 is revealed > should look like this 1`] = `
"
1: --  2: --+  
X|X|O  X|X|O   
-+-+-  -+-+-   
X| |   X| |    
-+-+-  -+-+-   
O| |2  O| |O   "
`;

exports[`a tictactoe > when playing 0, 2, 1, 6, 3 and 8 and revealing the winner > should look like this 1`] = `
"
1: -   2: -+  
X|X|O  X|X|O  
-+-+-  -+-+-  
X| |   X| |   
-+-+-  -+-+-  
O| |2  O| |O  "
`;

exports[`a tictactoe > when playing 0, 5, 2, 1, 4 and 3 > should reveal and display two winners when playing 6 1`] = `
"
1: -   2: -+     3: -+     
X|O|X  X |O |X!  X!|O |X   
-+-+-  --+--+--  --+--+--  
O|X|O  O |X!|O   O |X!|O   
-+-+-  --+--+--  --+--+--  
2| |3  X!|  |      |  |X!  "
`;

exports[`a tictactoe > when playing 0, 5, 2, 1, 4 and 3 > should reveal and display two winners when playing 8 1`] = `
"
1: -   2: -+     3: -+     
X|O|X  X |O |X!  X!|O |X   
-+-+-  --+--+--  --+--+--  
O|X|O  O |X!|O   O |X!|O   
-+-+-  --+--+--  --+--+--  
2| |3  X!|  |      |  |X!  "
`;
